--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".tasks.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.OverlapSystemBar">
             <intent-filter>
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".StatisticsActivity">
+        <activity android:name=".statistics.StatisticsActivity">
         </activity>
     </application>
 
